<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_27sdp"
        android:gravity="center"
        style="@style/countdownBoxStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvAnswerDurationTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_camera_rest_timer"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageButton
        android:id="@+id/captureButton"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:src="@drawable/round_fiber_manual_record_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginBottom="@dimen/_35sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgMask"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_260sdp"
        android:src="@drawable/ic_mask"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFiveToZeroTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_camera_dummy_init_timer"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="104sp"
        android:alpha="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTakeADeepBreath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_camera_take_breath"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:alpha="0.8"
        android:layout_marginBottom="@dimen/_55sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="10sp"
        android:src="@drawable/round_flash_on_24"
        app:tint="@color/white"
        android:id="@+id/toggleFlash"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="10sp"
        android:id="@+id/flipCameraButton"
        android:src="@drawable/round_flip_camera_android_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/toggleFlash"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>