<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.dialogs.RecordingCompletedDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/su_otp_cv_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingHorizontal="@dimen/_20sdp">

            <ImageView
                android:id="@+id/constraint_inq_img1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_metru_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/imgBtnShowQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_help_outline_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="@+id/constraint_inq_img1"
                app:layout_constraintBottom_toBottomOf="@+id/constraint_inq_img1"
                app:layout_constraintStart_toStartOf="@+id/constraint_inq_tv1"/>

            <TextView
                android:id="@+id/tvRedoAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:30"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:alpha="0.7"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_inq_img1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/constraint_inq_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:text="@string/nav_rec_completed_submit_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvRedoAnswer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_redo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:text="@string/nav_rec_completed_redo"
                android:textStyle="bold"
                android:textSize="@dimen/_8ssp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_inq_tv1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_continue"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:text="@string/nav_rec_completed_continue"
                android:textStyle="bold"
                android:textSize="@dimen/_8ssp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintTop_toBottomOf="@+id/constraint_inq_tv1"
                app:layout_constraintStart_toEndOf="@+id/btn_redo"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>

